# qubed

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  2  404.html  Cargo.toml  README.md  ROADMAP.md  algorithms.html  background.html  background.md  build_images.sh  compose.yaml  design_notes.md  docker-compose.yaml  dockerfile  index.html  notes.md  print.html  pyproject.toml  quickstart.html  run.sh  rustfmt.toml  searcher-09f2665d.js  searchindex-2863fc03.js  searchindex-5c7bf402.js  searchindex-90bba797.js  searchindex-a8d90e1f.js  searchindex-e5663146.js  skaffold.yaml  structured_stac.md  toc-78e66672.js  toc.html  todo.md
.github/: ci-hpc-config.yml
.github/workflows/: build-docs.yml  build_wheels.yml  cd.yml  ci.yml  docs.yml  downstream-ci.yml  publish-crates.yml  publish-pypi.yml  test-pypi.yml  test.yml  test_docs.yml
backend/: README.md  destinE_schema  destine_language.yaml  dockerfile  language.yaml  main.py  requirements.txt  tests.ipynb
backend/fdb_schema/: fdb_schema_parser.py
backend/webapp/: app.js  index.html  run.sh  styles.css
benches/: bench_roaring.rs
cache/: README.md  cache.py  climate-dt-cache.json  compress_tree.py  compressed_cache.json  demo.cast  list_entire_fdb.py  pretty_compressed_cache.txt  raw_to_tree.py  tree_to_compressed.py  update_cache.py  view_cache.py
cache/backups/: cache.json.backup.06.11.2024
chart/: Chart.yaml  README.md  values.yaml  values_dev.yaml  values_develop.yaml  values_main.yaml  values_test.yaml
chart/cron_jobs/: update_extremes_dt.py
chart/templates/: configmap.yaml  ingress.yaml  redis-load-data-job.yaml  scan-jobs.yaml  stac-server-deployment.yaml  web-query-builder-deployment.yaml
chart_deploy_scripts/: build_images.sh  deploy.sh  everything.sh  restart.sh
compression/: compress_metadata.py
config/: config-climate-dt.yaml  config-extremes-dt.yaml  config.yaml  fdb_config.yaml
config/climate-dt/: new_format.json
config/extremes-dt/: schema
config/language/: language.yaml
docs/: algorithms.md  autobuild.sh  book.toml  building_qubes_from_the_fdb.md  cmd.md  conf.py  development.md  fiab.md  index.md  installation.md  metadata.md  quickstart.md
docs/book/: 404.html  algorithms.html  background.html  index.html  print.html  quickstart.html  searcher-c2a407aa.js  searchindex-d3e54678.js  toc-095c3f7b.js  toc.html
docs/src/: SUMMARY.md  algorithms.md  background.md  index.md  (+1 more)
fdb_scanner/: README.md  fdb_dump_parser.py  fdb_dumper.py  key_ordering.py  kube_init.sh  scan.py  upload_all.py
fiab/: example_products.md  extract.py  raw_anemoi_metadata.json  structure.yaml
mars_scanner/: scan.py
notebooks/: test.ipynb
py_qubed/: Cargo.toml  pyproject.toml
py_qubed/src/: helpers.rs  lib.rs
py_qubed/tests/: test_difference_api.py  test_qubed_api.py  test_qubed_initialisation.py  test_qubed_utils.py  test_select.py  test_select_api.py
py_qubed_meteo/: Cargo.toml  pyproject.toml
py_qubed_meteo/src/: lib.rs
py_qubed_meteo/tests/: test_api.py  test_qubed_meteo_api.py
python/: py_qubed.html  py_qubed_meteo.html
qubed/: Cargo.toml  notes.md
qubed-meteo/: Cargo.toml
qubed/src/: compress.rs  datacube.rs  difference.rs  lib.rs  merge.rs  metadata.rs  node.rs  qube.rs  qubenode.rs  select.rs  view.rs
qubed/src/coordinates/: datetime.rs  float.rs  floats.rs  integers.rs  mod.rs  ops.rs  strings.rs
qubed/src/python/: python.rs
qubed/src/serde/: ascii.rs  json.rs
qubed/src/utils/: tiny_ordered_set.rs
qubed/tests/: tdd.rs  test_compression.rs  test_difference.rs  test_hash.rs  test_metadata.rs  test_metadata_compress_merge.rs  test_union.rs
qubed_meteo/: Cargo.toml  Dockerfile  pyproject.toml
qubed_meteo/docker/: cron-entrypoint.sh  fdb_scanner.crontab
qubed_meteo/examples/: dump_to_dss_constraints.rs  read_from_dss_constraints.rs  read_from_fdb_list.rs
qubed_meteo/py_qubed_meteo/: Cargo.toml  pyproject.toml
qubed_meteo/py_qubed_meteo/src/: lib.rs
qubed_meteo/py_qubed_meteo/tests/: test_api.py  test_qubed_meteo_api.py
qubed_meteo/qube_examples/: large_climate_eg.json  large_extremes_eg.json  medium_climate_eg.json  medium_extremes_eg.json  oper_fdb.json  small_climate_eg.json  small_extremes_eg.json
qubed_meteo/qubed_meteo/: Cargo.toml
qubed_meteo/qubed_meteo/examples/: read_from_fdb_list.rs
qubed_meteo/qubed_meteo/src/adapters/: dss_constraints.rs  fdb.rs  mars_list.rs  mod.rs
qubed_meteo/src/: lib.rs
qubed_meteo/src/adapters/: dss_constraints.rs  fdb.rs  mars_list.rs  mars_server.rs  mod.rs  to_constraints.rs
qubed_meteo/src/python/: python.rs
qubed_wasm/: Cargo.toml  build.sh
qubed_wasm/src/: lib.rs
rust/: qubed-meteo.html  qubed.html
scripts/: build_images.sh  deploy.sh  everything.sh  logs.sh  restart.sh
src/: lib.rs  qube.rs  select.rs  values.rs  view.rs
stac_server/: POLYTOPE_AUTH_TESTING.md  key_ordering.py  main.py  requirements.txt  run.sh  run_prod.sh  stac_router.py  test_api.py
test_scripts/: fdb_deblaster.py  fdb_deblaster_dumb.py  get_climate_dt_metadata.py  get_extremes_metadata.py  get_ondemand_metadata.py  get_operational_fc_metadata.py  metadata_benchmark.py  pyfdb_test.py  rust.py  scan_mars_tree.py  show_all_dts.py  test_mcp.py  update_climate_dt.py  update_dts.py  update_extremes_dt.py  update_no_metadata.py  update_ondemand_extremes_dt.py
tests/: api_tests.py  tdd.rs  test_attributes.py  test_basic_operations.py  test_compression.py  test_conversions.py  test_creation.py  test_formatters.py  test_iteration.py  test_metadata.py  test_remove_branch.py  test_rust.py  test_selection.py  test_smoke.py  test_special_unions.py  test_value_types.py
tests_python/: test_python_interface.py  test_qubed_meteo.py  test_to_ascii.py
tree_compresser/: Cargo.toml  README.md  pyproject.toml
tree_compresser/python_src/tree_traverser/: CompressedDataCubeTree.py  CompressedTree.py  DataCubeTree.py  __init__.py  __main__.py
tree_compresser/rust_src/: lib.rs  tree.rs
tree_compresser/tests/: open_climate_dt.py  test.py
web_query_builder/: app.py  requirements.txt  run.sh
webapp/: app.js  index.html  styles.css
(+80 files in other folders)
