[package]
name = "qubed"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/ecmwf/qubed"

[dependencies]
# rsfdb = {git = "https://github.com/ecmwf/rsfdb", branch = "develop"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For fdb binding
libc = "0.2"
libloading = "0.6"
once_cell =  "1.8"

[dependencies.pyo3]
version = "0.23"

[package.metadata.maturin]
version-from-git = true

[lib]
name = "tree_traverser"
crate-type = ["cdylib"]
path = "./src/rust/lib.rs"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
