[workspace]
resolver = "3"

members = [
    "qubed",
    "qubed_meteo",
    "py_qubed",
    "py_qubed_meteo",
]

[patch.'https://github.com/ecmwf/rsfdb']
rsfdb = { path = "/Users/male/git/rsfdb" }

[patch.'https://github.com/ecmwf-projects/rsfindlibs']
rsfindlibs = { path = "/Users/male/git/rsfindlibs" }

