[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "qubed"
description = "A library that provides a tree of datacubes called Qube."
readme = "README.md"
authors = [
  {name = "Tom Hodson", email = "thomas.hodson@ecmwf.int"},
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">= 3.11"
dynamic = ["version"]
dependencies = [
    "pe"
]

[tool.maturin]
python-source = "src/python"
module-name = "qubed.rust"
features = ["pyo3/extension-module"]


[project.optional-dependencies]
rust-backend = ["maturin"]

docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst_nb",
    "sphinx-autobuild"
]