[package]
name = "py_qubed"
version = "0.1.0"
edition = "2024"

[dependencies]
qubed = { path = "../qubed" }
serde_json = "1.0.145"
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py38"] }

[lib]
name = "qubed"
path = "src/lib.rs"
crate-type = ["cdylib"]

[tool.maturin]
module-name = "qubed"
