[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "qubed-meteo"
version = "0.1.0"
description = "Python bindings for meteorological adapters built on qubed"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
]

[features]
default = []
rsfdb-support = ["dep:rsfdb"]

[tool.maturin]
manifest-path = "Cargo.toml"
features = []
