[package]
name = "qubed"
version = "0.1.0"
edition = "2024"
description = "A new data structure to efficiently represent complex data spaces."
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/ecmwf/qubed"
homepage = "https://github.com/ecmwf/qubed"
documentation = "https://ecmwf.github.io/qubed/"


[dependencies]
arrayvec = "0.7.6"
itertools = "0.14.0"
lasso = "0.7.3"
serde_json = "1.0.145"
serde_yaml = "0.9.34"
slotmap = "1.0.7"
smallbitvec = "2.6.0"
tiny-str = "0.10.0"
tiny-vec = "0.10.0"
chrono = "0.4"
rayon = "1.7"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]
