[package]
name = "qubed_meteo"
version = "0.1.0"
edition = "2024"
description = "Meteorological adapters to the Qubed library."
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/ecmwf/qubed"
homepage = "https://github.com/ecmwf/qubed"
documentation = "https://ecmwf.github.io/qubed/"

[workspace]
members = [
    "../py_qubed_meteo",
]

[dependencies]
qubed = { path = "../qubed" }
serde = "1.0.228"
serde_json = "1.0.145"
rsfdb = { git = "https://github.com/ecmwf/rsfdb" , optional = true}

[features]
default = []
rsfdb-support = ["dep:rsfdb"]

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

