[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "tree_traverser"
description = "Tools to work with compressed Datacubes and Trees"
readme = "README.md"
authors = [
  {name = "Tom Hodson", email = "thomas.hodson@ecmwf.int"},
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">= 3.11"
dynamic = ["version"]
dependencies = [
    "pe"
]

[tool.maturin]
python-source = "python_src"
module-name = "tree_traverser.rust"
features = ["pyo3/extension-module"]

