[package]
name = "py_qubed_meteo"
version = "0.4.3"
edition = "2024"

[dependencies]
qubed = { path = "../../qubed" }
qubed_meteo = { path = "../qubed_meteo" }
serde_json = "1.0.145"
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py38"] }

[lib]
name = "qubed_meteo"
path = "src/lib.rs"
crate-type = ["cdylib"]
