[package]
name = "py_qubed_meteo"
version.workspace = true
edition = "2024"

[dependencies]
qubed = { workspace = true }
qubed_meteo = { path = "../qubed_meteo" }
serde_json = "1.0.145"
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py38"] }

[lib]
name = "qubed_meteo"
path = "src/lib.rs"
crate-type = ["cdylib"]
